Fixed alignment issue with the bio section when screen resized.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -57,7 +57,7 @@ body {
     height: auto;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     font-size: 14px;
 
